fix avatar clipping

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 .blob {
+  z-index: -1;
   animation: transform 25s ease-in-out infinite both alternate,
     movement 20s ease-in-out infinite both;
 }
